@@ -24,6 +24,7 @@
   Don't allow non numeric characters in the spin row
   Fix capitalization
 - Fix timer color when changing difficulty
+- Fix cells being in the wrong order in RTL
 - Update translations:
   Jiri Grönroos (fi); Ekaterine Papava (ka); Pawan Chitrakar (ne);
   Juliano de Souza Camargo (pt_BR); Sergej A. (ru); Martin (sl); Anders
